Fix jobInfoChips display issue on mobile devices
On mobile devices currently, the jobInfoChips are overlapping the Job Title, this change resolves this issue.

--- a/src/app/job-list/job-list.component.scss
+++ b/src/app/job-list/job-list.component.scss
@@ -92,7 +92,7 @@ novo-list {
     div.job-card{
       margin: 12px 15px;
       novo-list-item {
-        flex-direction: column;
+        flex-direction: inherit;
         item-header-end {
           display: flex;
           .mid-card {
